--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "starkstring": "^0.4.4"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.25.3",
