--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "classnames": "^2.5.1",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -27,6 +28,8 @@
     "@eslint/js": "^9.8.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@typescript-eslint/eslint-plugin": "^8.5.0",
+    "@typescript-eslint/parser": "^8.5.0",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.20",
     "babel-jest": "^29.7.0",
@@ -38,7 +41,9 @@
     "globals": "^15.9.0",
     "jest": "^29.7.0",
     "postcss": "^8.4.41",
+    "prettier": "^3.3.3",
     "tailwindcss": "^3.4.10",
+    "typescript": "^5.6.2",
     "vite": "^5.4.0"
   }
 }
